# Incenerate-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  chunk_test  image_load  initialize.bat  main.cpp  make_project.py  make_resource_debug.bat  make_resource_reldeb.bat  make_resource_release.bat  vox_loading
editor/: CMakeLists.txt  CustomControls.cpp  CustomControls.h  DebugGlobals.cpp  DebugGlobals.h  Editor.cpp  Editor.h  EditorActionBuffer.cpp  EditorProject.cpp  EditorRenderSystem.cpp  EditorRenderSystem.h  EditorThemes.cpp  Inspector.cpp  Inspector.h  main.cpp
editor/operations/: CopyEntityOperation.cpp  CreateEntityOperation.cpp  DuplicateEntityOperation.cpp  ExchangeEntityOperation.h  PropertyChangedOperation.cpp  PropertyChangedOperation.h  RemoveComponentOperation.cpp  RemoveEntityOperation.cpp
editor/windows/: ContentBrowserWindow.cpp  ContentBrowserWindow.h  GraphicsSettingsWindow.cpp  GraphicsSettingsWindow.h  HierarchyWindow.cpp  ImageViewerWindow.cpp  ImageViewerWindow.h  InspectorWindow.cpp  InspectorWindow.h  MaterialEditorWindow.cpp  MaterialEditorWindow.h  RenderDebugWindow.cpp  SystemPerfomanceViewWindow.h  ViewportWindow.cpp  ViewportWindow.h  WindowBase.h
editor/windows/materialeditor/: MaterialEditorParse.cpp
engine/: CMakeLists.txt  Camera.cpp  Camera.h  Engine.cpp  Engine.h  EngineECS.cpp  EngineEnums.cpp  EngineEnums.h  EngineStructures.cpp  EngineStructures.h  FreeCameraController.cpp  FreeCameraController.h  Frustum.h  Helpers.cpp  Helpers.h  LightManager.cpp  LightManager.h  ObjectManager.hpp  ShadowManager.cpp  ShadowManager.h  SparceVoxelOctree.cpp  SparseVoxelOctree.h  VoxelOctree.cpp  VoxelOctree.h  common.h
engine/audio/: AudioCore.cpp  AudioCore.h  AudioLoader.cpp  AudioLoader.h  AudioSource.cpp  AudioSource.h  AudioSystem.cpp  AudioSystem.h  CMakeLists.txt  audio_pch.h  oalhelp.h
engine/audio/interface/: AudioCoreInterface.h  AudioLoaderInterface.h  AudioReaderInterface.h  AudioSourceInterfsce.h
engine/audio/loaders/: AudioLoader.h  VorbisLoader.cpp  VorbisLoader.h  WavLoader.cpp  WavLoader.h
engine/ecs/: SceneGraph.cpp  SceneGraph.hpp  helper.hpp
engine/ecs/components/: AudioComponent.h  CameraComponent.h  ColliderComponent.h  ComponentParse.cpp  DirectionalLightComponent.h  EnvironmentComponent.h  HierarchyComponent.h  LightComponent.h  MeshComponent.h  ParticleComponent.h  PhysicsShapeComponent.h  PointLightComponent.h  RigidBodyComponent.h  SceneComponent.h  ScriptComponent.h  SkyboxComponent.h  SpotLightComponent.h  SpriteComponent.h  TerrainComponent.h  TransformComponent.h  components.h  fwd.h
engine/ecs/core/: ComponentArray.hpp  ComponentManager.hpp  Coordinator.cpp  Coordinator.hpp  EntityManager.cpp  EntityManager.hpp  Event.hpp  EventManager.cpp  EventManager.hpp  System.cpp  System.hpp  SystemManager.cpp  SystemManager.hpp  Type.hpp
engine/ecs/systems/: 2DRenderSystem.cpp  2DRenderSystem.h  3DRenderSystem.cpp  3DRenderSystem.h  AnimationSystem.cpp  AnimationSystem.h  AudioSystem.cpp  AudioSystem.h  BaseSystem.cpp  BaseSystem.h  CameraControlSystem.cpp  CameraControlSystem.h  CompositionSystem.cpp  CompositionSystem.h  EnvironmentSystem.cpp  EnvironmentSystem.h  HierarchySystem.cpp  HierarchySystem.h  InputSystem.cpp  InputSystem.h  LightsSystem.cpp  LightsSystem.h  ParticlesSystem.cpp  ParticlesSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  ScriptingSystem.cpp  systems.h  (+3 more)
engine/editor/: CustomControls.cpp  CustomControls.h  Editor.cpp  Editor.h  EditorActionBuffer.h  EditorProject.cpp  EditorProject.h  EditorStateMachine.h  EditorThemes.cpp  EditorThemes.h  igmui_impl_sdl.cpp  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
engine/event/: CMakeLists.txt  Event.cpp  Event.h  Event.hpp  EventInterface.h  EventManager.cpp  EventManager.hpp  EventManagerInterface.h
engine/filesystem/: CMakeLists.txt  DirectoryIterator.cpp  DirectoryIterator.h  VFSInputFile.cpp  VFSInputFile.h  VFSOutputFile.cpp  VFSOutputFile.h  VirtualFileSystemManager.cpp  VirtualFileSystemManager.h  filesystem_pch.h  ie_vfs_exports.h  vfs_helper.cpp  vfs_helper.h
engine/game/: CMakeLists.txt  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  GameObject.cpp  GameObject.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.hpp  SceneManager.cpp  SceneManager.h  SceneSerializer.cpp  SceneSerializer.h  TerrainGenerator.cpp  TerrainGenerator.h  Transform.cpp  Transform.h
engine/graphics/: APICompatibility.cpp  APICompatibility.h  APIHandle.cpp  APIHandle.h  APIStructures.cpp  APIStructures.h  CMakeLists.txt  DebugDraw.cpp  DebugDraw.h  DebugUtils.cpp  DebugUtils.h  Device.cpp  Device.h  Framebuffer.cpp  Framebuffer.h  Frustum.cpp  Frustum.h  GraphicsSettings.cpp  GraphicsSettings.h  Helpers.cpp  Helpers.h  ObjectManager.hpp  QueueFamily.cpp  QueueFamily.h  ResourceHolder.cpp  ResourceHolder.h  VoxelBufferObject.cpp  VoxelBufferObject.h  common.h  fdecl.h
engine/itl/: CMakeLists.txt
engine/loaders/: AudioLoader.cpp  AudioLoader.h  ImageLoader.cpp  ImageLoader.h  MeshLoader.cpp  MeshLoader.h
engine/parse/: glmparse.cpp  glmparse.h
engine/particles/: ParticleObject.cpp  ParticleObject.h  ParticleRenderer.cpp  ParticleRenderer.h  ParticlesCore.cpp  ParticlesCore.h
engine/physics/: PhysicsCore.cpp  PhysicsCore.h  PhysicsDebugDraw.cpp  PhysicsDebugDraw.h  PhysicsHelper.cpp  PhysicsHelper.h  PhysicsObject.cpp  PhysicsObject.h  PhysicsShape.cpp  PhysicsShape.h
engine/scripting/: CMakeLists.txt  ScriptSource.cpp  ScriptSource.h  ScriptingCore.cpp  ScriptingCore.h  components_binding.cpp  glm_binding.cpp  lua_bindings.h
engine/shared/: ObjectManager.hpp  SessionStorage.hpp  SharedInstances.h
engine/system/: CMakeLists.txt
project/: CMakeLists.txt  main.cpp
tools/shader_compiler/: CMakeLists.txt  compiler_parse.cpp  compiler_parse.h  compiler_structures.h  compiler_util.h  library_compiler.cpp  library_compiler.h  main.cpp  shader_compiler.cpp  shader_compiler.h  shader_library_parse.hpp  sjson_parser.h
(+672 files in other folders)
