cmake_minimum_required(VERSION 3.18.0)
project(IncenerateEvents)

file(GLOB INCENERATE_ENGINE_EVENT_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
file(GLOB INCENERATE_ENGINE_EVENT_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")

add_library(${PROJECT_NAME} STATIC ${INCENERATE_ENGINE_EVENT_SOURCES} ${INCENERATE_ENGINE_EVENT_HEADERS})

target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
set_target_properties(${PROJECT_NAME} PROPERTIES
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
)

target_include_directories(${PROJECT_NAME}
    PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}"
)