cmake_minimum_required(VERSION 3.18.0)
project(incenerate_engine_vfs LANGUAGES CXX)

file(GLOB VFS_SOURCES_HEAD "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
set(CPPVFS_SOURCE_FILES ${VFS_SOURCES_HEAD})

file(GLOB VFS_HEADERS_HEAD "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
set(CPPVFS_HEADER_FILES ${VFS_HEADERS_HEAD})

# GPAK FS
file(GLOB VFS_SOURCES_GPAK "${CMAKE_CURRENT_SOURCE_DIR}/gpak/*.cpp")
set(CPPVFS_SOURCE_FILES ${CPPVFS_SOURCE_FILES} ${VFS_SOURCES_GPAK})

file(GLOB VFS_HEADERS_GPAK "${CMAKE_CURRENT_SOURCE_DIR}/gpak/*.h")
set(CPPVFS_HEADER_FILES ${CPPVFS_HEADER_FILES} ${VFS_HEADERS_GPAK})

# Native FS
file(GLOB VFS_SOURCES_NATIVE "${CMAKE_CURRENT_SOURCE_DIR}/native/*.cpp")
set(CPPVFS_SOURCE_FILES ${CPPVFS_SOURCE_FILES} ${VFS_SOURCES_NATIVE})

file(GLOB VFS_HEADERS_NATIVE "${CMAKE_CURRENT_SOURCE_DIR}/native/*.h")
set(CPPVFS_HEADER_FILES ${CPPVFS_HEADER_FILES} ${VFS_HEADERS_NATIVE})

# ZIP FS
file(GLOB VFS_SOURCES_ZIP "${CMAKE_CURRENT_SOURCE_DIR}/zip/*.cpp")
set(CPPVFS_SOURCE_FILES ${CPPVFS_SOURCE_FILES} ${VFS_SOURCES_ZIP})

file(GLOB VFS_HEADERS_ZIP "${CMAKE_CURRENT_SOURCE_DIR}/zip/*.h")
set(CPPVFS_HEADER_FILES ${CPPVFS_HEADER_FILES} ${VFS_HEADERS_ZIP})

add_library(${PROJECT_NAME} STATIC ${CPPVFS_SOURCE_FILES} ${CPPVFS_HEADER_FILES})

target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
set_target_properties(${PROJECT_NAME} PROPERTIES
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
)

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib/libzip")
target_link_libraries(${PROJECT_NAME} PUBLIC libzip::zip)

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib/pak_archive/lib")
target_link_libraries(${PROJECT_NAME} PUBLIC libgpak)

target_include_directories(${PROJECT_NAME} PUBLIC 
    "${CMAKE_CURRENT_SOURCE_DIR}"
    "${CMAKE_CURRENT_SOURCE_DIR}/../external/utility"
    "${CMAKE_CURRENT_SOURCE_DIR}/lib/libzip/lib"
    "${CMAKE_CURRENT_SOURCE_DIR}/lib/pak_archive/lib"
)

target_precompile_headers( ${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/filesystem_pch.h")